src/styles/global.css
@font-face {
  font-family: 'Bobby Jones Soft';
  src: url('/fonts/bobby-jones-regular.woff2') format('woff2'),
    url('/fonts/bobby-jones-regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Bobby Rough Soft Outline';
  src: url('/fonts/bobby-jones-outline.woff2') format('woff2'),
    url('/fonts/bobby-jones-outline.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

:root {
  --font-bobby-soft: 'Bobby Jones Soft', sans-serif;
  --font-bobby-rough-soft-outline: 'Bobby Rough Soft Outline', sans-serif;
  --font-baloo-bhaijaan: 'Baloo Bhaijaan 2', sans-serif;

  --color-primary: #ff5758;
  --color-primary-light: #fff4f4;
  --color-secondary: #f0f9ff;
  --color-secondary-transparent: #f0f9ffe9;
  --color-blue: #0d9eff;
  --color-black: #252525;
  --color-white: #ffffff;
  --color-grey: #858585;
  --color-grey-light: #e0e0e0;
  --color-grey-shadow: #8585851a;

  --size-xxs: 0.75rem;
  --size-xs: 1rem;
  --size-sm: 1.25rem;
  --size-base: 1.563rem;
  --size-lg: 2.441rem;
  --size-xl: 3.052rem;
  --size-xxl: 3.815rem;

  --max-width-medium: 1024px;
  --max-width-large: 1440px;

  --border-radius-image: 0.5rem;

  --transition-normal: 0.2s ease-in-out;
  --transition-long: 0.5s ease-in-out;

  --box-shadow-normal: 1rem 1rem 4rem var(--color-grey-shadow);
}

/* Animations */

@view-transition {
  navigation: auto;
}

/**
  * Required class: `lsa` (initializes animations and defaults to fade-in)
  * Note: Add `no-repeat` class to prevent animations from repeating on scroll
  */

/* Accessibility: disable animations for users that prefer reduced motion */
@media (prefers-reduced-motion: no-preference) {
  /* Initialize & fade in element on scroll */
  .lsa {
    opacity: 0;
    visibility: hidden;
    transition: var(--transition-long);
    transition-property: opacity, visibility, transform;
  }

  /* Handle active state */
  .lsa.active {
    opacity: 1;
    visibility: visible;
    transform: none;
  }
}

html,
body {
  padding: 0;
  margin: 0;
}

html {
  box-sizing: border-box;
  scrollbar-width: auto;
  scrollbar-color: var(--color-secondary) var(--color-black);
}

body {
  overflow-x: hidden;
  font-family: var(--font-baloo-bhaijaan);
  letter-spacing: 0.75px;
  color: var(--color-black);

  /* Experimental, but fallback is default styling */
  text-wrap: balance;
}

body[data-overlay-displayed='true'] {
  overflow: hidden;
}

main {
  padding: 4rem 1rem;
}

@media (min-width: 768px) {
  main {
    padding: 6rem 2rem;
  }
}

section,
.container {
  max-width: var(--max-width-medium);
  margin: 0 auto;
}

h1 {
  font-family: var(--font-bobby-soft);
}

h3 {
  font-size: clamp(var(--size-base), 7vw, var(--size-lg));
  font-family: var(--font-bobby-soft);
}

h2,
h4,
h5 {
  font-family: var(--font-bobby-rough-soft-outline);
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
}

p,
li {
  font-size: clamp(var(--size-xs), 5vw, var(--size-sm));
}

p {
  margin: 0 0 1rem 0;
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  margin: 0;
  padding: 0;
}

li {
  list-style-type: none;
}

input,
textarea,
button {
  font-family: var(--font-baloo-bhaijaan);
  color: var(--color-black);
}

section:not(:last-child) {
  margin-bottom: 6rem;
}

img,
svg {
  width: 100%;
  height: auto;
  display: block;
  border-radius: var(--border-radius-image);
}

svg {
  transition: var(--transition-normal);
}

.site-cta {
  display: inline-block;
  padding: 0.75rem 1.5rem 0.6rem;
  color: var(--color-white);
  background-color: var(--color-primary);
  font-size: clamp(var(--size-sm), 3vw, var(--size-base));
  text-align: center;
  border: 0;
  border-radius: 10rem;
  cursor: pointer;
  transition: all var(--transition-normal);
}

.site-cta:hover {
  transform: scale(1.01) !important;
  box-shadow: var(--box-shadow-normal);
}

.site-cta:active {
  transform: scale(0.99);
}

